--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <meta charset=utf-8>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-		<!-- <meta name="apple-mobile-web-app-capable" content="yes"/> -->
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/> -->
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename = 'css/animation.css')}}"/>
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename = 'css/canvas.css')}}"/>
         <title>Terminal of Avem</title>
