feat: (Debug Window)

--- a/static/css/canvas.css
+++ b/static/css/canvas.css
@@ -5,7 +5,7 @@
 body {
     position: relative;
     margin: 0;
-    background-color: #000000;
+    background-color: #080B0E;
 	display: flex;
 	justify-content: center;
 }
