--- a/static/css/canvas.css
+++ b/static/css/canvas.css
@@ -2,6 +2,10 @@
     font-family: "custom-play";
     src: url('play.woff2') format('woff');
 }
+@font-face {
+    font-family: "custom-dig";
+    src: url('digital_(mono).ttf') format('truetype');
+}
 body {
     position: relative;
     margin: 0;
